# forgit

./: .gitignore  .pre-commit-config.yaml  Makefile  example-conf.yaml  pyproject.toml
forgit/: cli.py  config.py  constants.py  enums.py  exceptions.py  messages.py  parser.py  progressbar.py  throttling.py  transfer.py  utils.py
forgit/forges/: abstract.py  comment.py  diff.py  git_cli_api.py  github.py  gitlab.py  pagure.py  project.py
