[tool.poetry]
name = "forgit"
version = "0.1.0"
description = "Migrate your project to another git forge like a boss!"
authors = ["Jiri Kyjovsky <j1.kyjovsky@gmail.com>"]
maintainers = ["Jiří Kyjovský <j1.kyjovsky@gmail.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/nikromen/forgit"
repository = "https://github.com/nikromen/forgit"
exclude = ["test/"]


[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
gitpython = "^3.1"
ogr = "^0.37.0"
pydantic = "^1.10.2"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
forgit = "forgit.cli:cli"
